--- a/example/index.html
+++ b/example/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./index.umd.js"></script>
+    <script src="https://unpkg.com/rive-web-component@latest"></script>
 
 </head>
 <body style="background-color: #5D5D5D; width: 100%; height: 100%; margin: 0; position: absolute; display: flex; align-items: center; justify-content: center;">
